Fixed additonal alignment issues.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -588,6 +588,9 @@ footer a:hover{
       font-size: 1.5em;
     }
   }
+  .review-card-header{
+    font-size: 1.25em;
+  }
 }
 @media only screen and (max-width: 500px){
   .nav ul{
